@@ -1170,41 +1170,25 @@ argument_list|(
 name|job
 argument_list|)
 decl_stmt|;
-name|pushProjectionsAndFilters
+if|if
+condition|(
+name|this
+operator|.
+name|mrwork
+operator|==
+literal|null
+condition|)
+block|{
+name|init
 argument_list|(
-name|cloneJobConf
-argument_list|,
-name|inputFormatClass
-argument_list|,
-name|hsplit
-operator|.
-name|getPath
-argument_list|()
-operator|.
-name|toString
-argument_list|()
-argument_list|,
-name|hsplit
-operator|.
-name|getPath
-argument_list|()
-operator|.
-name|toUri
-argument_list|()
-operator|.
-name|getPath
-argument_list|()
+name|job
 argument_list|)
 expr_stmt|;
-name|InputFormat
-name|inputFormat
+block|}
+name|boolean
+name|nonNative
 init|=
-name|getInputFormatFromCache
-argument_list|(
-name|inputFormatClass
-argument_list|,
-name|cloneJobConf
-argument_list|)
+literal|false
 decl_stmt|;
 name|PartitionDesc
 name|part
@@ -1252,7 +1236,55 @@ argument_list|,
 name|cloneJobConf
 argument_list|)
 expr_stmt|;
+name|nonNative
+operator|=
+name|part
+operator|.
+name|getTableDesc
+argument_list|()
+operator|.
+name|isNonNative
+argument_list|()
+expr_stmt|;
 block|}
+name|pushProjectionsAndFilters
+argument_list|(
+name|cloneJobConf
+argument_list|,
+name|inputFormatClass
+argument_list|,
+name|hsplit
+operator|.
+name|getPath
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+name|hsplit
+operator|.
+name|getPath
+argument_list|()
+operator|.
+name|toUri
+argument_list|()
+operator|.
+name|getPath
+argument_list|()
+argument_list|,
+name|nonNative
+argument_list|)
+expr_stmt|;
+name|InputFormat
+name|inputFormat
+init|=
+name|getInputFormatFromCache
+argument_list|(
+name|inputFormatClass
+argument_list|,
+name|cloneJobConf
+argument_list|)
+decl_stmt|;
 name|RecordReader
 name|innerReader
 init|=
@@ -1967,6 +1999,40 @@ name|String
 name|splitPathWithNoSchema
 parameter_list|)
 block|{
+name|pushProjectionsAndFilters
+argument_list|(
+name|jobConf
+argument_list|,
+name|inputFormatClass
+argument_list|,
+name|splitPath
+argument_list|,
+name|splitPathWithNoSchema
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
+specifier|protected
+name|void
+name|pushProjectionsAndFilters
+parameter_list|(
+name|JobConf
+name|jobConf
+parameter_list|,
+name|Class
+name|inputFormatClass
+parameter_list|,
+name|String
+name|splitPath
+parameter_list|,
+name|String
+name|splitPathWithNoSchema
+parameter_list|,
+name|boolean
+name|nonNative
+parameter_list|)
+block|{
 if|if
 condition|(
 name|this
@@ -2054,8 +2120,42 @@ operator|.
 name|getKey
 argument_list|()
 decl_stmt|;
+name|boolean
+name|match
+decl_stmt|;
 if|if
 condition|(
+name|nonNative
+condition|)
+block|{
+comment|// For non-native tables, we need to do an exact match to avoid
+comment|// HIVE-1903.  (The table location contains no files, and the string
+comment|// representation of its path does not have a trailing slash.)
+name|match
+operator|=
+name|splitPath
+operator|.
+name|equals
+argument_list|(
+name|key
+argument_list|)
+operator|||
+name|splitPathWithNoSchema
+operator|.
+name|equals
+argument_list|(
+name|key
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+comment|// But for native tables, we need to do a prefix match for
+comment|// subdirectories.  (Unlike non-native tables, prefix mixups don't seem
+comment|// to be a potential problem here since we are always dealing with the
+comment|// path to something deeper than the table location.)
+name|match
+operator|=
 name|splitPath
 operator|.
 name|startsWith
@@ -2069,6 +2169,11 @@ name|startsWith
 argument_list|(
 name|key
 argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|match
 condition|)
 block|{
 name|ArrayList
